samples/_failures_safe/1761526093_83b854_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13baab1e.c: In function ‘main’:
./samples/SAFE/__tmp_13baab1e.c:136:5: error: expected expression at end of input
  136 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_13baab1e.c:136:5: error: expected declaration or statement at end of input
